MNGW-6426: Updating alignment issue and navbar.

--- a/app/styles/common/_header.scss
+++ b/app/styles/common/_header.scss
@@ -12,6 +12,24 @@
   }
 }
 
+.dropdown-spaced {
+  margin-top: 4px;
+}
+
+.dropdown-bold {
+  a {
+    color: $accent;
+    font-size: 11px;
+    font-weight: bold;
+    text-transform: uppercase;
+
+    &:hover {
+      color: #999;
+      text-decoration: none;
+    }
+  }
+}
+
 .header {
   @extend .row;
   //position: relative;
