--- a/app/styles/common/_wells.scss
+++ b/app/styles/common/_wells.scss
@@ -279,6 +279,11 @@ p.no-results {
     padding: 0px 15px !important;
   }
 }
+
+.promo-well {
+  padding-bottom: 15px;
+}
+
 .promo-contact{
   padding-bottom: 9px;
   color: black;
